# learning_rust

./: .gitignore  README.md
fractals/: Cargo.toml  README.md
fractals/compare_python/: julia_chatgpt.jl  python_jaxjit.py  python_native.py  python_numpy.py
fractals/src/: main.rs
nim/: Cargo.toml
nim/src/: .main.rs.rustfmt  main.rs
notes/: README.md  config.toml
notes/content/: _index.md  fractals.md  recursive_datastructures.md  rustlings.md
recursive_structures/: Cargo.toml  README.md
recursive_structures/src/: datastructures.rs  main.rs
rustlings/: rust-project.json  temp_16449_ThreadId1.long-type-2580277129285648146.txt
rustlings/exercises/: quiz1.rs  quiz2.rs
rustlings/exercises/enums/: enums2.rs  enums3.rs
rustlings/exercises/error_handling/: errors2.rs  errors6.rs
rustlings/exercises/functions/: functions1.rs
rustlings/exercises/generics/: generics2.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
rustlings/exercises/if/: if1.rs
rustlings/exercises/iterators/: iterators1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs
rustlings/exercises/move_semantics/: move_semantics2.rs
rustlings/exercises/options/: options2.rs
rustlings/exercises/primitive_types/: primitive_types2.rs  primitive_types3.rs
rustlings/exercises/smart_pointers/: box1.rs
rustlings/exercises/strings/: strings3.rs
rustlings/exercises/structs/: structs1.rs  structs2.rs
rustlings/exercises/tests/: tests2.rs
rustlings/exercises/threads/: threads1.rs  threads2.rs  threads3.rs
rustlings/exercises/traits/: traits2.rs  (+1 more)
(+2 files in other folders)
